# discrete-bayes-rs

./: AGENT.md  Cargo.toml  README.md
src/: bayes.rs  classifier.rs  conjugate.rs  lib.rs  posterior.rs  prior.rs
